--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -5,7 +5,8 @@
 <p>四人小組:<a href="https://40823212.github.io/cd2021/content/index.html">40823212</a>、<a href="https://40823236.github.io/cd2021/content/index.html">40823236</a>、<a href="https://github.com/40823236/stage2-bg9">40823231</a>、<a href="https://40823219.github.io/cd2021/content/">40823219</a></p>
 <p><span>四人小組倉儲:</span><a href="https://github.com/40823236/stage2-bg9">https://github.com/40823236/stage2-bg9</a></p>
 <p></p>
-<p>八人小組:<a href="https://40823212.github.io/cd2021/content/index.html">40823212</a><span>、</span><a href="https://40823236.github.io/cd2021/content/index.html">40823236</a><span>、</span><a href="https://github.com/40823236/stage2-bg9">40823231</a><span>、</span><a href="https://40823219.github.io/cd2021/content/">40823219</a></p><h1>筆記</h1>
+<p>八人小組:<a href="https://40823212.github.io/cd2021/content/index.html">40823212</a><span>、</span><a href="https://40823236.github.io/cd2021/content/index.html">40823236</a><span>、</span><a href="https://github.com/40823236/stage2-bg9">40823231</a><span>、</span><a href="https://40823219.github.io/cd2021/content/">40823219</a></p>
+<h1>筆記</h1>
 <p>github更動導致檔案push不上去</p>
 <p><img alt="" height="128" src="/images/10.png" width="1027"/></p>
 <p><img alt="" height="207" src="/images/11.png" width="607"/></p>
@@ -113,7 +114,10 @@
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/X-RIa_wT8jE" title="YouTube video player" width="560"></iframe></p>
 <p>CoppeliaSim</p>
 <p></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="698" src="https://www.youtube.com/embed/ItDuRrlRQUQ" title="YouTube video player" width="600"></iframe></p><h1>小組</h1>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="698" src="https://www.youtube.com/embed/ItDuRrlRQUQ" title="YouTube video player" width="600"></iframe></p>
+<h2>w10 stage3 </h2>
+<p></p>
+<h1>小組</h1>
 <h2>w1 討論主題</h2>
 <p><img alt="" height="710" src="/images/TEXE.png" width="956"/></p>
 <p><img alt="" height="700" src="/images/TEXE2.png" width="954"/></p>
