--- a/content/w10 stage3.html
+++ b/content/w10 stage3.html
@@ -133,14 +133,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w6~w7 bg2 零件 << <a href='w6~w7 bg2 零件.html'>Previous</a> <a href='w10 stage3.html'>Next</a> >> w10 stage3<br /><h1>w8~w9 模擬</h1>
-<p>solidwork</p>
-<p></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/X-RIa_wT8jE" title="YouTube video player" width="560"></iframe></p>
-<p>CoppeliaSim</p>
-<p></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="698" src="https://www.youtube.com/embed/ItDuRrlRQUQ" title="YouTube video player" width="600"></iframe></p>
-<br />w6~w7 bg2 零件 << <a href='w6~w7 bg2 零件.html'>Previous</a> <a href='w10 stage3.html'>Next</a> >> w10 stage3</div>
+    <div id="tipue_search_content">w8~w9 模擬 << <a href='w8~w9 模擬.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組<br /><h1>w10 stage3</h1>
+<p><a href="./../downloads/主體0507.STL">火車主體改版</a></p>
+<p><img alt="" height="322" src="./../images/20210507.png" width="500"/></p><br />w8~w9 模擬 << <a href='w8~w9 模擬.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組</div>
         
     <!-- footer -->
       <div class="container">
