--- a/config/content.htm
+++ b/config/content.htm
@@ -117,7 +117,10 @@
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="698" src="https://www.youtube.com/embed/ItDuRrlRQUQ" title="YouTube video player" width="600"></iframe></p>
 <h2>w10 stage3</h2>
 <p><a href="/downloads/主體0507.STL">火車主體改版</a></p>
-<p><img alt="" height="322" src="/images/20210507.png" width="500"/></p><h1>小組</h1>
+<p><img alt="" height="322" src="/images/20210507.png" width="500"/></p>
+<p></p>
+<p><a href="/downloads/主體.0507-2.STL">主體新增漏斗車廂</a></p>
+<p><img alt="" height="327" src="/images/0507-2.png" width="500"/></p><h1>小組</h1>
 <h2>w1 討論主題</h2>
 <p><img alt="" height="710" src="/images/TEXE.png" width="956"/></p>
 <p><img alt="" height="700" src="/images/TEXE2.png" width="954"/></p>
