--- a/content/w11.html
+++ b/content/w11.html
@@ -133,13 +133,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w8~w9 模擬 << <a href='w8~w9 模擬.html'>Previous</a> <a href='w11.html'>Next</a> >> w11<br /><h1>w10 stage3</h1>
-<p><a href="./../downloads/主體0507.STL">火車主體改版</a></p>
-<p><img alt="" height="322" src="./../images/20210507.png" width="500"/></p>
-<p></p>
-<p><a href="./../downloads/主體.0507-2.STL">主體新增漏斗車廂</a></p>
-<p><img alt="" height="327" src="./../images/0507-2.png" width="500"/></p>
-<br />w8~w9 模擬 << <a href='w8~w9 模擬.html'>Previous</a> <a href='w11.html'>Next</a> >> w11</div>
+    <div id="tipue_search_content">w10 stage3 << <a href='w10 stage3.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組<br /><h1>w11</h1>
+<p>火車主體</p>
+<p><img alt="" height="323" src="./../images/0514主體.png" width="500"/></p>
+<p>擋板</p>
+<p><img alt="" height="328" src="./../images/0514擋版.png" width="500"/></p><br />w10 stage3 << <a href='w10 stage3.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組</div>
         
     <!-- footer -->
       <div class="container">
