--- a/config/content.htm
+++ b/config/content.htm
@@ -125,7 +125,11 @@
 <p>火車主體</p>
 <p><img alt="" height="323" src="/images/0514主體.png" width="500"/></p>
 <p>擋板</p>
-<p><img alt="" height="328" src="/images/0514擋版.png" width="500"/></p><h1>小組</h1>
+<p><img alt="" height="328" src="/images/0514擋版.png" width="500"/></p>
+<p>上蓋板</p>
+<p><img alt="" height="320" src="/images/0514上蓋版.png" width="500"/></p>
+<p>組合件</p>
+<p><img alt="" height="331" src="/images/0514組合體.png" width="500"/></p><h1>小組</h1>
 <h2>w1 討論主題</h2>
 <p><img alt="" height="710" src="/images/TEXE.png" width="956"/></p>
 <p><img alt="" height="700" src="/images/TEXE2.png" width="954"/></p>
