--- a/config/content.htm
+++ b/config/content.htm
@@ -122,11 +122,11 @@
 <p><a href="/downloads/主體.0507-2.STL">主體新增漏斗車廂</a></p>
 <p><img alt="" height="327" src="/images/0507-2.png" width="500"/></p>
 <h2>w11</h2>
-<p>火車主體</p>
+<p><a href="/downloads/0514主體.STL">火車主體</a></p>
 <p><img alt="" height="323" src="/images/0514主體.png" width="500"/></p>
-<p>擋板</p>
+<p><a href="/downloads/0514擋門.STL">擋板</a></p>
 <p><img alt="" height="328" src="/images/0514擋版.png" width="500"/></p>
-<p>上蓋板</p>
+<p><a href="/downloads/0514蓋板.STL">上蓋板</a></p>
 <p><img alt="" height="320" src="/images/0514上蓋版.png" width="500"/></p>
 <p>組合件</p>
 <p><img alt="" height="331" src="/images/0514組合體.png" width="500"/></p><h1>小組</h1>
