--- a/content/w11.html
+++ b/content/w11.html
@@ -134,11 +134,11 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w10 stage3 << <a href='w10 stage3.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組<br /><h1>w11</h1>
-<p>火車主體</p>
+<p><a href="./../downloads/0514主體.STL">火車主體</a></p>
 <p><img alt="" height="323" src="./../images/0514主體.png" width="500"/></p>
-<p>擋板</p>
+<p><a href="./../downloads/0514擋門.STL">擋板</a></p>
 <p><img alt="" height="328" src="./../images/0514擋版.png" width="500"/></p>
-<p>上蓋板</p>
+<p><a href="./../downloads/0514蓋板.STL">上蓋板</a></p>
 <p><img alt="" height="320" src="./../images/0514上蓋版.png" width="500"/></p>
 <p>組合件</p>
 <p><img alt="" height="331" src="./../images/0514組合體.png" width="500"/></p><br />w10 stage3 << <a href='w10 stage3.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組</div>
