--- a/content/w11 火車改版-1.html
+++ b/content/w11 火車改版-1.html
@@ -133,13 +133,15 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w8~w9 模擬 << <a href='w8~w9 模擬.html'>Previous</a> <a href='w11 火車改版-1.html'>Next</a> >> w11 火車改版-1<br /><h1>w10 stage3</h1>
-<p><a href="./../downloads/主體0507.STL">火車主體改版</a></p>
-<p><img alt="" height="322" src="./../images/20210507.png" width="500"/></p>
-<p></p>
-<p><a href="./../downloads/主體.0507-2.STL">主體新增漏斗車廂</a></p>
-<p><img alt="" height="327" src="./../images/0507-2.png" width="500"/></p>
-<br />w8~w9 模擬 << <a href='w8~w9 模擬.html'>Previous</a> <a href='w11 火車改版-1.html'>Next</a> >> w11 火車改版-1</div>
+    <div id="tipue_search_content">w10 stage3 << <a href='w10 stage3.html'>Previous</a> <a href='w12 火車改版-2.html'>Next</a> >> w12 火車改版-2<br /><h1>w11 火車改版-1</h1>
+<p><a href="./../downloads/0514主體.STL">火車主體</a></p>
+<p><img alt="" height="323" src="./../images/0514主體.png" width="500"/></p>
+<p><a href="./../downloads/0514擋門.STL">擋板</a></p>
+<p><img alt="" height="328" src="./../images/0514擋版.png" width="500"/></p>
+<p><a href="./../downloads/0514蓋板.STL">上蓋板</a></p>
+<p><img alt="" height="320" src="./../images/0514上蓋版.png" width="500"/></p>
+<p>組合件</p>
+<p><img alt="" height="331" src="./../images/0514組合體.png" width="500"/></p><br />w10 stage3 << <a href='w10 stage3.html'>Previous</a> <a href='w12 火車改版-2.html'>Next</a> >> w12 火車改版-2</div>
         
     <!-- footer -->
       <div class="container">
