--- a/content/w12 火車改版-2.html
+++ b/content/w12 火車改版-2.html
@@ -133,13 +133,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w8~w9 模擬 << <a href='w8~w9 模擬.html'>Previous</a> <a href='w11 火車改版-1.html'>Next</a> >> w11 火車改版-1<br /><h1>w10 stage3</h1>
-<p><a href="./../downloads/主體0507.STL">火車主體改版</a></p>
-<p><img alt="" height="322" src="./../images/20210507.png" width="500"/></p>
-<p></p>
-<p><a href="./../downloads/主體.0507-2.STL">主體新增漏斗車廂</a></p>
-<p><img alt="" height="327" src="./../images/0507-2.png" width="500"/></p>
-<br />w8~w9 模擬 << <a href='w8~w9 模擬.html'>Previous</a> <a href='w11 火車改版-1.html'>Next</a> >> w11 火車改版-1</div>
+    <div id="tipue_search_content">w11 火車改版-1 << <a href='w11 火車改版-1.html'>Previous</a> <a href='w13.html'>Next</a> >> w13<br /><h1>w12 火車改版-2</h1>
+<p>丟入<span>CoppeliaSim連桿會出現錯誤，所以將活塞連桿改至第一個車輪</span></p>
+<p><a href="./../downloads/stage-3 蒸氣火車 0521.7z">火車.stl</a></p><br />w11 火車改版-1 << <a href='w11 火車改版-1.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
         
     <!-- footer -->
       <div class="container">
