--- a/content/w12 火車改版-2.html
+++ b/content/w12 火車改版-2.html
@@ -135,7 +135,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content">w11 火車改版-1 << <a href='w11 火車改版-1.html'>Previous</a> <a href='w13.html'>Next</a> >> w13<br /><h1>w12 火車改版-2</h1>
 <p>丟入<span>CoppeliaSim連桿會出現錯誤，所以將活塞連桿改至第一個車輪</span></p>
-<p><a href="./../downloads/stage-3 蒸氣火車 0521.7z">火車.stl</a></p><br />w11 火車改版-1 << <a href='w11 火車改版-1.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
+<p><a href="./../downloads/stage-3 蒸氣火車 0521.7z">火車.stl</a></p>
+<p><img alt="" height="333" src="./../images/火車0521.png" width="500"/></p><br />w11 火車改版-1 << <a href='w11 火車改版-1.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
         
     <!-- footer -->
       <div class="container">
