--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -131,7 +131,8 @@
 <p>組合件</p>
 <p><img alt="" height="331" src="/images/0514組合體.png" width="500"/></p><h2>w12 火車改版-2</h2>
 <p>丟入<span>CoppeliaSim連桿會出現錯誤，所以將活塞連桿改至第一個車輪</span></p>
-<p><a href="/downloads/stage-3 蒸氣火車 0521.7z">火車.stl</a></p><h2>w13</h2>
+<p><a href="/downloads/stage-3 蒸氣火車 0521.7z">火車.stl</a></p>
+<p><img alt="" height="333" src="/images/火車0521.png" width="500"/></p><h2>w13</h2>
 <h1>小組</h1>
 <h2>w1 討論主題</h2>
 <p><img alt="" height="710" src="/images/TEXE.png" width="956"/></p>
