component image update2

--- a/config/content.htm
+++ b/config/content.htm
@@ -143,6 +143,8 @@
 <p><img alt="" height="318" src="/images/後車輪0521.png" width="500"/></p>
 <p>活塞桶(縮短滑行軌道以配合連接桿運動)</p>
 <p><img alt="" height="322" src="/images/活塞桶0521.png" width="500"/></p>
+<p>下活塞連接桿(縮短下活塞連接桿尺寸以配合前輪與下活塞運動)</p>
+<p><img alt="" height="319" src="/images/下活塞連接桿0521.png" width="500"/></p>
 <p></p>
 <p></p>
 <p></p>
