--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -137,6 +137,14 @@
 <p><img alt="" height="319" src="/images/下活塞0521.png" width="500"/></p>
 <p>下活塞連桿(新增<span>下活塞連桿，以連結第一個車輪</span>)</p>
 <p><img alt="" height="319" src="/images/小活塞連桿0521.png" width="500"/></p>
+<p>前車輪(新增連接下活塞連桿的銷)</p>
+<p><img alt="" height="319" src="/images/前車輪0521.png" width="500"/></p>
+<p>後車輪(在連接處另一面增加配重使運動更順暢)</p>
+<p><img alt="" height="318" src="/images/後車輪0521.png" width="500"/></p>
+<p>活塞桶(縮短滑行軌道以配合連接桿運動)</p>
+<p><img alt="" height="322" src="/images/活塞桶0521.png" width="500"/></p>
+<p></p>
+<p></p>
 <p></p>
 <p></p><h2>w13</h2>
 <h1>小組</h1>
