--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -143,11 +143,14 @@
 <p><img alt="" height="318" src="/images/後車輪0521.png" width="500"/></p>
 <p>活塞桶(縮短滑行軌道以配合連接桿運動)</p>
 <p><img alt="" height="322" src="/images/活塞桶0521.png" width="500"/></p>
+<p>下活塞連接桿(縮短下活塞連接桿尺寸以配合前輪與下活塞運動)</p>
+<p><img alt="" height="319" src="/images/下活塞連接桿0521.png" width="500"/></p>
 <p></p>
 <p></p>
 <p></p>
-<p></p><h2>w13</h2>
-<h1>小組</h1>
+<p></p><h2>w13 火車改版-3</h2>
+<p><a href="/downloads/鐵軌.STL">新增鐵軌</a></p>
+<p><img alt="" height="318" src="/images/鐵軌.png" width="500"/></p><h1>小組</h1>
 <h2>w1 討論主題</h2>
 <p><img alt="" height="710" src="/images/TEXE.png" width="956"/></p>
 <p><img alt="" height="700" src="/images/TEXE2.png" width="954"/></p>
