--- a/content/w12 火車改版-2.html
+++ b/content/w12 火車改版-2.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='w1 影片.html'>w1 影片</a></li></ul><li class='has-children'><a href='w2~w3 BG1主題零件繪製.html'>w2~w3 BG1主題零件繪製</a><ul class='dropdown'><li><a href='w2零件繪製影片.html'>w2零件繪製影片</a></li></ul><li><a href='w4網站影片.html'>w4網站影片</a><li><a href='W5 BG2 主題.html'>W5 BG2 主題</a><li><a href='w6~w7 bg2 零件.html'>w6~w7 bg2 零件</a><li><a href='w8~w9 模擬.html'>w8~w9 模擬</a><li><a href='w10 stage3.html'>w10 stage3</a><li><a href='w11 火車改版-1.html'>w11 火車改版-1</a><li><a href='w12 火車改版-2.html'>w12 火車改版-2</a><li><a href='w13.html'>w13</a></li></ul><li class='has-children'><a href='小組.html'>小組</a><ul class='dropdown'><li><a href='w1 討論主題.html'>w1 討論主題</a><li><a href='w2 零件繪製討論.html'>w2 零件繪製討論</a></li>
+                     <li><a href='About.html'>About</a><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='w1 影片.html'>w1 影片</a></li></ul><li class='has-children'><a href='w2~w3 BG1主題零件繪製.html'>w2~w3 BG1主題零件繪製</a><ul class='dropdown'><li><a href='w2零件繪製影片.html'>w2零件繪製影片</a></li></ul><li><a href='w4網站影片.html'>w4網站影片</a><li><a href='W5 BG2 主題.html'>W5 BG2 主題</a><li><a href='w6~w7 bg2 零件.html'>w6~w7 bg2 零件</a><li><a href='w8~w9 模擬.html'>w8~w9 模擬</a><li><a href='w10 stage3.html'>w10 stage3</a><li><a href='w11 火車改版-1.html'>w11 火車改版-1</a><li><a href='w12 火車改版-2.html'>w12 火車改版-2</a><li><a href='w13 火車改版-3.html'>w13 火車改版-3</a></li></ul><li class='has-children'><a href='小組.html'>小組</a><ul class='dropdown'><li><a href='w1 討論主題.html'>w1 討論主題</a><li><a href='w2 零件繪製討論.html'>w2 零件繪製討論</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w11 火車改版-1 << <a href='w11 火車改版-1.html'>Previous</a> <a href='w13.html'>Next</a> >> w13<br /><h1>w12 火車改版-2</h1>
+    <div id="tipue_search_content">w11 火車改版-1 << <a href='w11 火車改版-1.html'>Previous</a> <a href='w13 火車改版-3.html'>Next</a> >> w13 火車改版-3<br /><h1>w12 火車改版-2</h1>
 <p>丟入<span>CoppeliaSim連桿會出現錯誤，所以將活塞連桿改至第一個車輪</span></p>
 <p><a href="./../downloads/stage-3 蒸氣火車 0521.7z">火車.stl</a></p>
 <p><img alt="" height="333" src="./../images/火車0521.png" width="500"/></p>
@@ -152,7 +152,7 @@ img.add_border {
 <p></p>
 <p></p>
 <p></p>
-<p></p><br />w11 火車改版-1 << <a href='w11 火車改版-1.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
+<p></p><br />w11 火車改版-1 << <a href='w11 火車改版-1.html'>Previous</a> <a href='w13 火車改版-3.html'>Next</a> >> w13 火車改版-3</div>
         
     <!-- footer -->
       <div class="container">
