--- a/config/content.htm
+++ b/config/content.htm
@@ -129,7 +129,8 @@
 <p><a href="/downloads/0514蓋板.STL">上蓋板</a></p>
 <p><img alt="" height="320" src="/images/0514上蓋版.png" width="500"/></p>
 <p>組合件</p>
-<p><img alt="" height="331" src="/images/0514組合體.png" width="500"/></p><h2>w12 火車改版-2</h2>
+<p><img alt="" height="331" src="/images/0514組合體.png" width="500"/></p>
+<h2>w12 火車改版-2</h2>
 <p>丟入<span>CoppeliaSim連桿會出現錯誤，所以將活塞連桿改至第一個車輪</span></p>
 <p><a href="/downloads/stage-3 蒸氣火車 0521.7z">火車.stl</a></p>
 <p><img alt="" height="333" src="/images/火車0521.png" width="500"/></p>
@@ -148,9 +149,18 @@
 <p></p>
 <p></p>
 <p></p>
-<p></p><h2>w13 火車改版-3</h2>
+<p></p>
+<h2>w13 火車改版-3</h2>
 <p><a href="/downloads/鐵軌.STL">新增鐵軌</a></p>
-<p><img alt="" height="318" src="/images/鐵軌.png" width="500"/></p><h1>小組</h1>
+<p><img alt="" height="318" src="/images/鐵軌.png" width="500"/></p>
+<h2>w14~15 彈珠檯改版</h2>
+<p>新增通道</p>
+<p>讓彈珠順利流至火車</p>
+<p><a href="/downloads/彈珠檯本體.STL">本體</a></p>
+<p><img alt="" height="330" src="/images/彈珠檯-1.png" width="500"/></p>
+<p>組合件</p>
+<p><img alt="" height="323" src="/images/彈珠檯.png" width="500"/></p><h2>w16</h2>
+<h1>小組</h1>
 <h2>w1 討論主題</h2>
 <p><img alt="" height="710" src="/images/TEXE.png" width="956"/></p>
 <p><img alt="" height="700" src="/images/TEXE2.png" width="954"/></p>
