--- a/content/w14~15 彈珠檯改版.html
+++ b/content/w14~15 彈珠檯改版.html
@@ -133,8 +133,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">筆記 << <a href='筆記.html'>Previous</a> <a href='w1.html'>Next</a> >> w1<br /><h1>Work</h1>
-<br />筆記 << <a href='筆記.html'>Previous</a> <a href='w1.html'>Next</a> >> w1</div>
+    <div id="tipue_search_content">w13 火車改版-3 << <a href='w13 火車改版-3.html'>Previous</a> <a href='w16.html'>Next</a> >> w16<br /><h1>w14~15 彈珠檯改版</h1>
+<p>新增通道</p>
+<p>讓彈珠順利流至火車</p>
+<p><a href="./../downloads/彈珠檯本體.STL">本體</a></p>
+<p><img alt="" height="330" src="./../images/彈珠檯-1.png" width="500"/></p>
+<p>組合件</p>
+<p><img alt="" height="323" src="./../images/彈珠檯.png" width="500"/></p><br />w13 火車改版-3 << <a href='w13 火車改版-3.html'>Previous</a> <a href='w16.html'>Next</a> >> w16</div>
         
     <!-- footer -->
       <div class="container">
