--- a/content/w16.html
+++ b/content/w16.html
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">筆記 << <a href='筆記.html'>Previous</a> <a href='w1.html'>Next</a> >> w1<br /><h1>Work</h1>
-<br />筆記 << <a href='筆記.html'>Previous</a> <a href='w1.html'>Next</a> >> w1</div>
+    <div id="tipue_search_content">w14~15 彈珠檯改版 << <a href='w14~15 彈珠檯改版.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組<br /><h1>w16</h1>
+<br />w14~15 彈珠檯改版 << <a href='w14~15 彈珠檯改版.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組</div>
         
     <!-- footer -->
       <div class="container">
