--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -153,8 +153,13 @@
 <h2>w13 火車改版-3</h2>
 <p><a href="/downloads/鐵軌.STL">新增鐵軌</a></p>
 <p><img alt="" height="318" src="/images/鐵軌.png" width="500"/></p>
-<h2>w14~15</h2>
-<h2>w16</h2>
+<h2>w14~15 彈珠檯改版</h2>
+<p>新增通道</p>
+<p>讓彈珠順利流至火車</p>
+<p><a href="/downloads/彈珠檯本體.STL">本體</a></p>
+<p><img alt="" height="330" src="/images/彈珠檯-1.png" width="500"/></p>
+<p>組合件</p>
+<p><img alt="" height="323" src="/images/彈珠檯.png" width="500"/></p><h2>w16</h2>
 <h1>小組</h1>
 <h2>w1 討論主題</h2>
 <p><img alt="" height="710" src="/images/TEXE.png" width="956"/></p>
