downloads and images

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -161,8 +161,10 @@
 <p>組合件</p>
 <p><img alt="" height="323" src="/images/彈珠檯.png" width="500"/></p>
 <h2>w16 零件改版</h2>
-<p>將所有零件簡化以達成</p>
-<p><img alt="" height="333" src="/images/0605-2.png" width="500"/></p><h1>小組</h1>
+<p>將所有零件簡化以達成<span>CoppeliaSim正常運作</span></p>
+<p><img alt="" height="333" src="/images/0605-2.png" width="500"/></p>
+<p></p>
+<p><img alt="" height="331" src="/images/0605.png" width="500"/></p><h1>小組</h1>
 <h2>w1 討論主題</h2>
 <p><img alt="" height="710" src="/images/TEXE.png" width="956"/></p>
 <p><img alt="" height="700" src="/images/TEXE2.png" width="954"/></p>
