--- a/content/w16 零件改版.html
+++ b/content/w16 零件改版.html
@@ -134,10 +134,14 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w14~15 彈珠檯改版 << <a href='w14~15 彈珠檯改版.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組<br /><h1>w16 零件改版</h1>
+<p><a href="./../downloads/蒸汽火車0605.7z">零件檔</a></p>
 <p>將所有零件簡化以達成<span>CoppeliaSim正常運作</span></p>
 <p><img alt="" height="333" src="./../images/0605-2.png" width="500"/></p>
 <p></p>
-<p><img alt="" height="331" src="./../images/0605.png" width="500"/></p><br />w14~15 彈珠檯改版 << <a href='w14~15 彈珠檯改版.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組</div>
+<p><img alt="" height="331" src="./../images/0605.png" width="500"/></p>
+<p>將擋門由滑軌機構改制開門的方式運作</p>
+<p><img alt="" height="328" src="./../images/0605-3.png" width="500"/></p>
+<p><img alt="" height="332" src="./../images/0605-4.png" width="500"/></p><br />w14~15 彈珠檯改版 << <a href='w14~15 彈珠檯改版.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組</div>
         
     <!-- footer -->
       <div class="container">
