--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -161,10 +161,17 @@
 <p>組合件</p>
 <p><img alt="" height="323" src="/images/彈珠檯.png" width="500"/></p>
 <h2>w16 零件改版</h2>
+<p><a href="/downloads/蒸汽火車0605.7z">零件檔</a></p>
 <p>將所有零件簡化以達成<span>CoppeliaSim正常運作</span></p>
 <p><img alt="" height="333" src="/images/0605-2.png" width="500"/></p>
 <p></p>
-<p><img alt="" height="331" src="/images/0605.png" width="500"/></p><h1>小組</h1>
+<p><img alt="" height="331" src="/images/0605.png" width="500"/></p>
+<p>將擋門由滑軌機構改制開門的方式運作</p>
+<p><img alt="" height="328" src="/images/0605-3.png" width="500"/></p>
+<p><img alt="" height="332" src="/images/0605-4.png" width="500"/></p>
+<h2>w17</h2>
+<p></p><h2>w18</h2>
+<h1>小組</h1>
 <h2>w1 討論主題</h2>
 <p><img alt="" height="710" src="/images/TEXE.png" width="956"/></p>
 <p><img alt="" height="700" src="/images/TEXE2.png" width="954"/></p>
