--- a/config/content.htm
+++ b/config/content.htm
@@ -5,8 +5,7 @@
 <p>四人小組:<a href="https://40823212.github.io/cd2021/content/index.html">40823212</a>、<a href="https://40823236.github.io/cd2021/content/index.html">40823236</a>、<a href="https://github.com/40823236/stage2-bg9">40823231</a>、<a href="https://40823219.github.io/cd2021/content/">40823219</a></p>
 <p><span>四人小組倉儲:</span><a href="https://github.com/40823236/stage2-bg9">https://github.com/40823236/stage2-bg9</a></p>
 <p></p>
-<p>八人小組:<a href="https://40823212.github.io/cd2021/content/index.html">40823212</a><span>、</span><a href="https://40823236.github.io/cd2021/content/index.html">40823236</a><span>、</span><a href="https://github.com/40823236/stage2-bg9">40823231</a><span>、</span><a href="https://40823219.github.io/cd2021/content/">40823219</a></p>
-<h1>筆記</h1>
+<p>八人小組:<a href="https://40823212.github.io/cd2021/content/index.html">40823212</a><span>、</span><a href="https://40823236.github.io/cd2021/content/index.html">40823236</a><span>、</span><a href="https://github.com/40823236/stage2-bg9">40823231</a><span>、</span><a href="https://40823219.github.io/cd2021/content/">40823219</a> <span>、40823202、40823203、40823244、40823222</span></p><h1>筆記</h1>
 <p>github更動導致檔案push不上去</p>
 <p><img alt="" height="128" src="/images/10.png" width="1027"/></p>
 <p><img alt="" height="207" src="/images/11.png" width="607"/></p>
@@ -168,7 +167,10 @@
 <p><img alt="" height="331" src="/images/0605.png" width="500"/></p>
 <p>將擋門由滑軌機構改制開門的方式運作</p>
 <p><img alt="" height="328" src="/images/0605-3.png" width="500"/></p>
-<p><img alt="" height="332" src="/images/0605-4.png" width="500"/></p><h1>小組</h1>
+<p><img alt="" height="332" src="/images/0605-4.png" width="500"/></p>
+<h2>w17</h2>
+<p></p><h2>w18</h2>
+<h1>小組</h1>
 <h2>w1 討論主題</h2>
 <p><img alt="" height="710" src="/images/TEXE.png" width="956"/></p>
 <p><img alt="" height="700" src="/images/TEXE2.png" width="954"/></p>
