--- a/content/w16 零件改版.html
+++ b/content/w16 零件改版.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w1 影片.html'>w1 影片</a><li><a href='w2~w3 BG1主題零件繪製.html'>w2~w3 BG1主題零件繪製</a><li><a href='w2零件繪製影片.html'>w2零件繪製影片</a><li><a href='w4網站影片.html'>w4網站影片</a><li><a href='W5 BG2 主題.html'>W5 BG2 主題</a><li><a href='w6~w7 bg2 零件.html'>w6~w7 bg2 零件</a><li><a href='w8~w9 模擬.html'>w8~w9 模擬</a><li><a href='w10 stage3.html'>w10 stage3</a><li><a href='w11 火車改版-1.html'>w11 火車改版-1</a><li><a href='w12 火車改版-2.html'>w12 火車改版-2</a><li><a href='w13 火車改版-3.html'>w13 火車改版-3</a><li><a href='w14~15 彈珠檯改版.html'>w14~15 彈珠檯改版</a><li><a href='w16 零件改版.html'>w16 零件改版</a></li></ul><li class='has-children'><a href='小組.html'>小組</a><ul class='dropdown'><li><a href='w1 討論主題.html'>w1 討論主題</a><li><a href='w2 零件繪製討論.html'>w2 零件繪製討論</a></li>
+                     <li><a href='About.html'>About</a><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w1 影片.html'>w1 影片</a><li><a href='w2~w3 BG1主題零件繪製.html'>w2~w3 BG1主題零件繪製</a><li><a href='w2零件繪製影片.html'>w2零件繪製影片</a><li><a href='w4網站影片.html'>w4網站影片</a><li><a href='W5 BG2 主題.html'>W5 BG2 主題</a><li><a href='w6~w7 bg2 零件.html'>w6~w7 bg2 零件</a><li><a href='w8~w9 模擬.html'>w8~w9 模擬</a><li><a href='w10 stage3.html'>w10 stage3</a><li><a href='w11 火車改版-1.html'>w11 火車改版-1</a><li><a href='w12 火車改版-2.html'>w12 火車改版-2</a><li><a href='w13 火車改版-3.html'>w13 火車改版-3</a><li><a href='w14~15 彈珠檯改版.html'>w14~15 彈珠檯改版</a><li><a href='w16 零件改版.html'>w16 零件改版</a><li><a href='w17.html'>w17</a><li><a href='w18.html'>w18</a></li></ul><li class='has-children'><a href='小組.html'>小組</a><ul class='dropdown'><li><a href='w1 討論主題.html'>w1 討論主題</a><li><a href='w2 零件繪製討論.html'>w2 零件繪製討論</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w14~15 彈珠檯改版 << <a href='w14~15 彈珠檯改版.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組<br /><h1>w16 零件改版</h1>
+    <div id="tipue_search_content">w14~15 彈珠檯改版 << <a href='w14~15 彈珠檯改版.html'>Previous</a> <a href='w17.html'>Next</a> >> w17<br /><h1>w16 零件改版</h1>
 <p><a href="./../downloads/蒸汽火車0605.7z">零件檔</a></p>
 <p>將所有零件簡化以達成<span>CoppeliaSim正常運作</span></p>
 <p><img alt="" height="333" src="./../images/0605-2.png" width="500"/></p>
@@ -141,7 +141,8 @@ img.add_border {
 <p><img alt="" height="331" src="./../images/0605.png" width="500"/></p>
 <p>將擋門由滑軌機構改制開門的方式運作</p>
 <p><img alt="" height="328" src="./../images/0605-3.png" width="500"/></p>
-<p><img alt="" height="332" src="./../images/0605-4.png" width="500"/></p><br />w14~15 彈珠檯改版 << <a href='w14~15 彈珠檯改版.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組</div>
+<p><img alt="" height="332" src="./../images/0605-4.png" width="500"/></p>
+<br />w14~15 彈珠檯改版 << <a href='w14~15 彈珠檯改版.html'>Previous</a> <a href='w17.html'>Next</a> >> w17</div>
         
     <!-- footer -->
       <div class="container">
