--- a/content/w17.html
+++ b/content/w17.html
@@ -133,10 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">小組 << <a href='小組.html'>Previous</a> <a href='w2 零件繪製討論.html'>Next</a> >> w2 零件繪製討論<br /><h1>w1 討論主題</h1>
-<p><img alt="" height="710" src="./../images/TEXE.png" width="956"/></p>
-<p><img alt="" height="700" src="./../images/TEXE2.png" width="954"/></p>
-<br />小組 << <a href='小組.html'>Previous</a> <a href='w2 零件繪製討論.html'>Next</a> >> w2 零件繪製討論</div>
+    <div id="tipue_search_content">w16 零件改版 << <a href='w16 零件改版.html'>Previous</a> <a href='w18.html'>Next</a> >> w18<br /><h1>w17</h1>
+<p></p><br />w16 零件改版 << <a href='w16 零件改版.html'>Previous</a> <a href='w18.html'>Next</a> >> w18</div>
         
     <!-- footer -->
       <div class="container">
