--- a/content/w18.html
+++ b/content/w18.html
@@ -133,10 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">小組 << <a href='小組.html'>Previous</a> <a href='w2 零件繪製討論.html'>Next</a> >> w2 零件繪製討論<br /><h1>w1 討論主題</h1>
-<p><img alt="" height="710" src="./../images/TEXE.png" width="956"/></p>
-<p><img alt="" height="700" src="./../images/TEXE2.png" width="954"/></p>
-<br />小組 << <a href='小組.html'>Previous</a> <a href='w2 零件繪製討論.html'>Next</a> >> w2 零件繪製討論</div>
+    <div id="tipue_search_content">w17 << <a href='w17.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組<br /><h1>w18</h1>
+<br />w17 << <a href='w17.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組</div>
         
     <!-- footer -->
       <div class="container">
