--- a/content/About.html
+++ b/content/About.html
@@ -141,7 +141,8 @@ img.add_border {
 <p><span>四人小組倉儲:</span><a href="https://github.com/40823236/stage2-bg9">https://github.com/40823236/stage2-bg9</a></p>
 <p></p>
 <p>八人小組:</p>
-<p><a href="https://40823212.github.io/cd2021/content/index.html">40823212</a><span>、</span><a href="https://40823236.github.io/cd2021/content/index.html">40823236</a><span>、</span><a href="https://github.com/40823236/stage2-bg9">40823231</a><span>、</span><a href="https://40823219.github.io/cd2021/content/">40823219</a> <span>、<a href="https://github.com/40823202/cd2021">40823202</a>、<a href="https://github.com/40823203/cd2021">40823203</a>、<a href="https://github.com/40823244/cd2021">40823244</a>、<a href="https://github.com/40823222/cd2021">40823222</a></span></p><br /> <a href='筆記.html'>Next</a> >> 筆記</div>
+<p><a href="https://40823212.github.io/cd2021/content/index.html">40823212</a><span>、</span><a href="https://40823236.github.io/cd2021/content/index.html">40823236</a><span>、</span><a href="https://github.com/40823236/stage2-bg9">40823231</a><span>、</span><a href="https://40823219.github.io/cd2021/content/">40823219</a> <span>、<a href="https://github.com/40823202/cd2021">40823202</a>、<a href="https://github.com/40823203/cd2021">40823203</a>、<a href="https://github.com/40823244/cd2021">40823244</a>、<a href="https://github.com/40823222/cd2021">40823222</a></span></p>
+<p><span><strong>八人小組倉儲:<a href="https://40823236.github.io/stage3-bg3/content/index.html">https://40823236.github.io/stage3-bg3/content/index.html</a></strong></span></p><br /> <a href='筆記.html'>Next</a> >> 筆記</div>
         
     <!-- footer -->
       <div class="container">
