--- a/content/robot dk.html
+++ b/content/robot dk.html
@@ -133,17 +133,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='筆記.html'>Next</a> >> 筆記<br /><h1>About</h1>
-<h4>倉儲:<a href="https://github.com/40823212/cd2021">https://github.com/40823212/cd2021</a></h4>
-<h4>二人小組:40823212、40823236</h4>
-<p>gitter:<a href="https://gitter.im/cd2021bg7/community">https://gitter.im/cd2021bg7/community#</a></p>
-<p>四人小組:<a href="https://40823212.github.io/cd2021/content/index.html">40823212</a>、<a href="https://40823236.github.io/cd2021/content/index.html">40823236</a>、<a href="https://github.com/40823236/stage2-bg9">40823231</a>、<a href="https://40823219.github.io/cd2021/content/">40823219</a></p>
-<p><span>四人小組倉儲:</span><a href="https://github.com/40823236/stage2-bg9">https://github.com/40823236/stage2-bg9</a></p>
+    <div id="tipue_search_content">w13 火車改版-3 << <a href='w13 火車改版-3.html'>Previous</a> <a href='w14~15 彈珠檯改版.html'>Next</a> >> w14~15 彈珠檯改版<br /><h1>robot dk</h1>
+<p><strong>Robodk測試</strong></p>
 <p></p>
-<p>八人小組:</p>
-<p><a href="https://40823212.github.io/cd2021/content/index.html">40823212</a><span>、</span><a href="https://40823236.github.io/cd2021/content/index.html">40823236</a><span>、</span><a href="https://github.com/40823236/stage2-bg9">40823231</a><span>、</span><a href="https://40823219.github.io/cd2021/content/">40823219</a> <span>、<a href="https://github.com/40823202/cd2021">40823202</a>、<a href="https://github.com/40823203/cd2021">40823203</a>、<a href="https://github.com/40823244/cd2021">40823244</a>、<a href="https://github.com/40823222/cd2021">40823222</a></span></p>
-<p><span><strong>八人小組倉儲:<a href="https://40823236.github.io/stage3-bg3/content/index.html">https://40823236.github.io/stage3-bg3/content/index.html</a></strong></span></p>
-<br /> <a href='筆記.html'>Next</a> >> 筆記</div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/2nXX00Ti9B0" title="YouTube video player" width="560"></iframe></p><br />w13 火車改版-3 << <a href='w13 火車改版-3.html'>Previous</a> <a href='w14~15 彈珠檯改版.html'>Next</a> >> w14~15 彈珠檯改版</div>
         
     <!-- footer -->
       <div class="container">
