--- a/content/w12改版測試影片.html
+++ b/content/w12改版測試影片.html
@@ -133,13 +133,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w4網站影片 << <a href='w4網站影片.html'>Previous</a> <a href='w6~w7 bg2 零件.html'>Next</a> >> w6~w7 bg2 零件<br /><h1>W5 BG2 主題</h1>
-<p>蒸汽火車</p>
-<p>1.滑環      2.區拐銷    3.<span>半徑桿</span></p>
-<p>4.<span>合併桿   </span>5.<span>十字頭    6.活塞閥  7.汽缸</span></p>
-<p><img alt="" height="270" src="./../images/STEAM TRAIN.gif" width="597"/></p>
+    <div id="tipue_search_content">w12 火車改版-2 << <a href='w12 火車改版-2.html'>Previous</a> <a href='task1.html'>Next</a> >> task1<br /><h1>w12改版測試影片</h1>
 <p></p>
-<br />w4網站影片 << <a href='w4網站影片.html'>Previous</a> <a href='w6~w7 bg2 零件.html'>Next</a> >> w6~w7 bg2 零件</div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/X-529aegxkU" title="YouTube video player" width="560"></iframe></p><br />w12 火車改版-2 << <a href='w12 火車改版-2.html'>Previous</a> <a href='task1.html'>Next</a> >> task1</div>
         
     <!-- footer -->
       <div class="container">
