--- a/content/w16_exam.html
+++ b/content/w16_exam.html
@@ -136,7 +136,12 @@ img.add_border {
     <div id="tipue_search_content">w16 零件改版 << <a href='w16 零件改版.html'>Previous</a> <a href='w17.html'>Next</a> >> w17<br /><h1>w16_exam</h1>
 <p>1.<a href="/get_page/w16_exam/:https:/cad.onshape.com/documents/988e316b35b1b3e793e43d6e/w/a96c7f48b2dae15a69f2e903/e/a69ba6b9d1fe5b5919271f53">onshape檔</a></p>
 <p><a href="./../downloads/40823212-.stl">onshape.stl</a></p>
-<p><img alt="" height="399" src="./../images/螢幕擷取畫面 2021-06-15 064942.png" width="500"/></p><br />w16 零件改版 << <a href='w16 零件改版.html'>Previous</a> <a href='w17.html'>Next</a> >> w17</div>
+<p><img alt="" height="399" src="./../images/螢幕擷取畫面 2021-06-15 064942.png" width="500"/></p>
+<p></p>
+<p>建立 CoppeliaSim 4.1.0 MTB robot 場景</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/GrWUUiJEEw0" title="YouTube video player" width="560"></iframe></p>
+<p>手臂末端加入 components-gripper-suction pad 吸盤</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Q2BkuZu6NoU" title="YouTube video player" width="560"></iframe></p><br />w16 零件改版 << <a href='w16 零件改版.html'>Previous</a> <a href='w17.html'>Next</a> >> w17</div>
         
     <!-- footer -->
       <div class="container">
