--- a/config/content.htm
+++ b/config/content.htm
@@ -192,9 +192,11 @@
 <p></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Fl9I07R56FQ" title="YouTube video player" width="560"></iframe></p>
 <p>A=控制joint1逆時鐘，D=控制joint1順時鐘<br/> 左鍵=控制joint2逆時鐘，右鍵=控制joint2順時鐘<br/> S=jointz向下並控制吸盤作動，W=jointz向上<br/> 空白鍵:吸盤停止吸力</p>
-<p></p><h2>w17</h2>
 <p></p>
-<h2>w18</h2>
+<h2>w17 模擬期末報告影片</h2>
+<p></p>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/rA6fsnuCr-8" title="YouTube video player" width="560"></iframe></p><h2>w18</h2>
 <h1>小組</h1>
 <h2>w1 討論主題</h2>
 <p><img alt="" height="710" src="/images/TEXE.png" width="956"/></p>
