--- a/content/w16_exam.html
+++ b/content/w16_exam.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w1 影片.html'>w1 影片</a><li><a href='w2~w3 BG1主題零件繪製.html'>w2~w3 BG1主題零件繪製</a><li><a href='w2零件繪製影片.html'>w2零件繪製影片</a><li><a href='w4網站影片.html'>w4網站影片</a><li><a href='W5 BG2 主題.html'>W5 BG2 主題</a><li><a href='w6~w7 bg2 零件.html'>w6~w7 bg2 零件</a><li><a href='w8~w9 模擬.html'>w8~w9 模擬</a><li><a href='w10 stage3.html'>w10 stage3</a><li><a href='w11 火車改版-1.html'>w11 火車改版-1</a><li><a href='w12 火車改版-2.html'>w12 火車改版-2</a><li><a href='w12改版測試影片.html'>w12改版測試影片</a><li><a href='task1.html'>task1</a><li><a href='w13 火車改版-3.html'>w13 火車改版-3</a><li><a href='robot dk.html'>robot dk</a><li><a href='w14~15 彈珠檯改版.html'>w14~15 彈珠檯改版</a><li><a href='w16 零件改版.html'>w16 零件改版</a><li><a href='w16_exam.html'>w16_exam</a><li><a href='w17.html'>w17</a><li><a href='w18.html'>w18</a></li></ul><li class='has-children'><a href='小組.html'>小組</a><ul class='dropdown'><li><a href='w1 討論主題.html'>w1 討論主題</a><li><a href='w2 零件繪製討論.html'>w2 零件繪製討論</a></li>
+                     <li><a href='About.html'>About</a><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w1 影片.html'>w1 影片</a><li><a href='w2~w3 BG1主題零件繪製.html'>w2~w3 BG1主題零件繪製</a><li><a href='w2零件繪製影片.html'>w2零件繪製影片</a><li><a href='w4網站影片.html'>w4網站影片</a><li><a href='W5 BG2 主題.html'>W5 BG2 主題</a><li><a href='w6~w7 bg2 零件.html'>w6~w7 bg2 零件</a><li><a href='w8~w9 模擬.html'>w8~w9 模擬</a><li><a href='w10 stage3.html'>w10 stage3</a><li><a href='w11 火車改版-1.html'>w11 火車改版-1</a><li><a href='w12 火車改版-2.html'>w12 火車改版-2</a><li><a href='w12改版測試影片.html'>w12改版測試影片</a><li><a href='task1.html'>task1</a><li><a href='w13 火車改版-3.html'>w13 火車改版-3</a><li><a href='robot dk.html'>robot dk</a><li><a href='w14~15 彈珠檯改版.html'>w14~15 彈珠檯改版</a><li><a href='w16 零件改版.html'>w16 零件改版</a><li><a href='w16_exam.html'>w16_exam</a><li><a href='w17 模擬期末報告影片.html'>w17 模擬期末報告影片</a><li><a href='w18.html'>w18</a></li></ul><li class='has-children'><a href='小組.html'>小組</a><ul class='dropdown'><li><a href='w1 討論主題.html'>w1 討論主題</a><li><a href='w2 零件繪製討論.html'>w2 零件繪製討論</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w16 零件改版 << <a href='w16 零件改版.html'>Previous</a> <a href='w17.html'>Next</a> >> w17<br /><h1>w16_exam</h1>
+    <div id="tipue_search_content">w16 零件改版 << <a href='w16 零件改版.html'>Previous</a> <a href='w17 模擬期末報告影片.html'>Next</a> >> w17 模擬期末報告影片<br /><h1>w16_exam</h1>
 <p>1.<a href="/get_page/w16_exam/:https:/cad.onshape.com/documents/988e316b35b1b3e793e43d6e/w/a96c7f48b2dae15a69f2e903/e/a69ba6b9d1fe5b5919271f53">onshape檔</a></p>
 <p><a href="./../downloads/40823212-.stl">onshape.stl</a></p>
 <p><img alt="" height="399" src="./../images/螢幕擷取畫面 2021-06-15 064942.png" width="500"/></p>
@@ -149,7 +149,8 @@ img.add_border {
 <p></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Fl9I07R56FQ" title="YouTube video player" width="560"></iframe></p>
 <p>A=控制joint1逆時鐘，D=控制joint1順時鐘<br/> 左鍵=控制joint2逆時鐘，右鍵=控制joint2順時鐘<br/> S=jointz向下並控制吸盤作動，W=jointz向上<br/> 空白鍵:吸盤停止吸力</p>
-<p></p><br />w16 零件改版 << <a href='w16 零件改版.html'>Previous</a> <a href='w17.html'>Next</a> >> w17</div>
+<p></p>
+<br />w16 零件改版 << <a href='w16 零件改版.html'>Previous</a> <a href='w17 模擬期末報告影片.html'>Next</a> >> w17 模擬期末報告影片</div>
         
     <!-- footer -->
       <div class="container">
