--- a/content/w17 模擬期末報告影片.html
+++ b/content/w17 模擬期末報告影片.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w1 影片.html'>w1 影片</a><li><a href='w2~w3 BG1主題零件繪製.html'>w2~w3 BG1主題零件繪製</a><li><a href='w2零件繪製影片.html'>w2零件繪製影片</a><li><a href='w4網站影片.html'>w4網站影片</a><li><a href='W5 BG2 主題.html'>W5 BG2 主題</a><li><a href='w6~w7 bg2 零件.html'>w6~w7 bg2 零件</a><li><a href='w8~w9 模擬.html'>w8~w9 模擬</a><li><a href='w10 stage3.html'>w10 stage3</a><li><a href='w11 火車改版-1.html'>w11 火車改版-1</a><li><a href='w12 火車改版-2.html'>w12 火車改版-2</a><li><a href='w12改版測試影片.html'>w12改版測試影片</a><li><a href='task1.html'>task1</a><li><a href='w13 火車改版-3.html'>w13 火車改版-3</a><li><a href='robot dk.html'>robot dk</a><li><a href='w14~15 彈珠檯改版.html'>w14~15 彈珠檯改版</a><li><a href='w16 零件改版.html'>w16 零件改版</a><li><a href='w16_exam.html'>w16_exam</a><li><a href='w17.html'>w17</a><li><a href='w18.html'>w18</a></li></ul><li class='has-children'><a href='小組.html'>小組</a><ul class='dropdown'><li><a href='w1 討論主題.html'>w1 討論主題</a><li><a href='w2 零件繪製討論.html'>w2 零件繪製討論</a></li>
+                     <li><a href='About.html'>About</a><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w1 影片.html'>w1 影片</a><li><a href='w2~w3 BG1主題零件繪製.html'>w2~w3 BG1主題零件繪製</a><li><a href='w2零件繪製影片.html'>w2零件繪製影片</a><li><a href='w4網站影片.html'>w4網站影片</a><li><a href='W5 BG2 主題.html'>W5 BG2 主題</a><li><a href='w6~w7 bg2 零件.html'>w6~w7 bg2 零件</a><li><a href='w8~w9 模擬.html'>w8~w9 模擬</a><li><a href='w10 stage3.html'>w10 stage3</a><li><a href='w11 火車改版-1.html'>w11 火車改版-1</a><li><a href='w12 火車改版-2.html'>w12 火車改版-2</a><li><a href='w12改版測試影片.html'>w12改版測試影片</a><li><a href='task1.html'>task1</a><li><a href='w13 火車改版-3.html'>w13 火車改版-3</a><li><a href='robot dk.html'>robot dk</a><li><a href='w14~15 彈珠檯改版.html'>w14~15 彈珠檯改版</a><li><a href='w16 零件改版.html'>w16 零件改版</a><li><a href='w16_exam.html'>w16_exam</a><li><a href='w17 模擬期末報告影片.html'>w17 模擬期末報告影片</a><li><a href='w18.html'>w18</a></li></ul><li class='has-children'><a href='小組.html'>小組</a><ul class='dropdown'><li><a href='w1 討論主題.html'>w1 討論主題</a><li><a href='w2 零件繪製討論.html'>w2 零件繪製討論</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,9 +133,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w16_exam << <a href='w16_exam.html'>Previous</a> <a href='w18.html'>Next</a> >> w18<br /><h1>w17</h1>
+    <div id="tipue_search_content">w16_exam << <a href='w16_exam.html'>Previous</a> <a href='w18.html'>Next</a> >> w18<br /><h1>w17 模擬期末報告影片</h1>
 <p></p>
-<br />w16_exam << <a href='w16_exam.html'>Previous</a> <a href='w18.html'>Next</a> >> w18</div>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/rA6fsnuCr-8" title="YouTube video player" width="560"></iframe></p><br />w16_exam << <a href='w16_exam.html'>Previous</a> <a href='w18.html'>Next</a> >> w18</div>
         
     <!-- footer -->
       <div class="container">
