--- a/content/stage1-bg7.html
+++ b/content/stage1-bg7.html
@@ -133,9 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w2零件繪製影片 << <a href='w2零件繪製影片.html'>Previous</a> <a href='stage2-bg9.html'>Next</a> >> stage2-bg9<br /><h1>w4網站影片</h1>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/kxmn_N9FlcU" width="560"></iframe></p>
-<br />w2零件繪製影片 << <a href='w2零件繪製影片.html'>Previous</a> <a href='stage2-bg9.html'>Next</a> >> stage2-bg9</div>
+    <div id="tipue_search_content">筆記 << <a href='筆記.html'>Previous</a> <a href='w1.html'>Next</a> >> w1<br /><h1>stage1-bg7</h1><br />筆記 << <a href='筆記.html'>Previous</a> <a href='w1.html'>Next</a> >> w1</div>
         
     <!-- footer -->
       <div class="container">
