--- a/content/stage3-bg3.html
+++ b/content/stage3-bg3.html
@@ -133,9 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w2零件繪製影片 << <a href='w2零件繪製影片.html'>Previous</a> <a href='stage2-bg9.html'>Next</a> >> stage2-bg9<br /><h1>w4網站影片</h1>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/kxmn_N9FlcU" width="560"></iframe></p>
-<br />w2零件繪製影片 << <a href='w2零件繪製影片.html'>Previous</a> <a href='stage2-bg9.html'>Next</a> >> stage2-bg9</div>
+    <div id="tipue_search_content">w8~w9 模擬 << <a href='w8~w9 模擬.html'>Previous</a> <a href='w10 stage3.html'>Next</a> >> w10 stage3<br /><h1>stage3-bg3</h1><br />w8~w9 模擬 << <a href='w8~w9 模擬.html'>Previous</a> <a href='w10 stage3.html'>Next</a> >> w10 stage3</div>
         
     <!-- footer -->
       <div class="container">
