--- a/content/筆記.html
+++ b/content/筆記.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w1 影片.html'>w1 影片</a><li><a href='w2~w3 BG1主題零件繪製.html'>w2~w3 BG1主題零件繪製</a><li><a href='w2零件繪製影片.html'>w2零件繪製影片</a><li><a href='w4網站影片.html'>w4網站影片</a><li><a href='W5 BG2 主題.html'>W5 BG2 主題</a><li><a href='w6~w7 bg2 零件.html'>w6~w7 bg2 零件</a><li><a href='w8~w9 模擬.html'>w8~w9 模擬</a><li><a href='w10 stage3.html'>w10 stage3</a><li><a href='w11 火車改版-1.html'>w11 火車改版-1</a><li><a href='w12 火車改版-2.html'>w12 火車改版-2</a><li><a href='w12改版測試影片.html'>w12改版測試影片</a><li><a href='task1.html'>task1</a><li><a href='w13 火車改版-3.html'>w13 火車改版-3</a><li><a href='robot dk.html'>robot dk</a><li><a href='w14~15 彈珠檯改版.html'>w14~15 彈珠檯改版</a><li><a href='w16 零件改版.html'>w16 零件改版</a><li><a href='w16_exam.html'>w16_exam</a><li><a href='w17 模擬期末報告影片.html'>w17 模擬期末報告影片</a><li><a href='w18.html'>w18</a></li></ul><li class='has-children'><a href='小組.html'>小組</a><ul class='dropdown'><li><a href='w1 討論主題.html'>w1 討論主題</a><li><a href='w2 零件繪製討論.html'>w2 零件繪製討論</a></li>
+                     <li><a href='About.html'>About</a><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='stage1-bg7.html'>stage1-bg7</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w1 影片.html'>w1 影片</a><li><a href='w2~w3 BG1主題零件繪製.html'>w2~w3 BG1主題零件繪製</a><li><a href='w2零件繪製影片.html'>w2零件繪製影片</a><li><a href='w4網站影片.html'>w4網站影片</a></li></ul><li class='has-children'><a href='stage2-bg9.html'>stage2-bg9</a><ul class='dropdown'><li><a href='W5 BG2 主題.html'>W5 BG2 主題</a><li><a href='w6~w7 bg2 零件.html'>w6~w7 bg2 零件</a><li><a href='w8~w9 模擬.html'>w8~w9 模擬</a></li></ul><li class='has-children'><a href='stage3-bg3.html'>stage3-bg3</a><ul class='dropdown'><li><a href='w10 stage3.html'>w10 stage3</a><li><a href='w11 火車改版-1.html'>w11 火車改版-1</a><li><a href='w12 火車改版-2.html'>w12 火車改版-2</a><li><a href='w12改版測試影片.html'>w12改版測試影片</a><li><a href='task1.html'>task1</a><li><a href='w13 火車改版-3.html'>w13 火車改版-3</a><li><a href='robot dk.html'>robot dk</a><li><a href='w14~15 彈珠檯改版.html'>w14~15 彈珠檯改版</a><li><a href='w16 零件改版.html'>w16 零件改版</a><li><a href='w16_exam.html'>w16_exam</a><li><a href='w17 模擬期末報告影片.html'>w17 模擬期末報告影片</a><li><a href='w18.html'>w18</a></li></ul><li class='has-children'><a href='小組.html'>小組</a><ul class='dropdown'><li><a href='w1 討論主題.html'>w1 討論主題</a><li><a href='w2 零件繪製討論.html'>w2 零件繪製討論</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,13 +133,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Work.html'>Next</a> >> Work<br /><h1>筆記</h1>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='stage1-bg7.html'>Next</a> >> stage1-bg7<br /><h1>筆記</h1>
 <p>github更動導致檔案push不上去</p>
 <p><img alt="" height="128" src="./../images/10.png" width="1027"/></p>
 <p><img alt="" height="207" src="./../images/11.png" width="607"/></p>
 <p><span>在小黑窗打gitpull將遠端和近端整合</span></p>
 <p><span><img alt="" height="392" src="./../images/12.png" width="680"/></span></p>
-<br />About << <a href='About.html'>Previous</a> <a href='Work.html'>Next</a> >> Work</div>
+<br />About << <a href='About.html'>Previous</a> <a href='stage1-bg7.html'>Next</a> >> stage1-bg7</div>
         
     <!-- footer -->
       <div class="container">
