--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -117,8 +117,7 @@
 <p>CoppeliaSim</p>
 <p></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="698" src="https://www.youtube.com/embed/ItDuRrlRQUQ" title="YouTube video player" width="600"></iframe></p>
-<h1>stage3</h1>
-<h2>w10 stage3</h2>
+<h1>stage3-bg3</h1><h2>w10 stage3</h2>
 <p><a href="/downloads/主體0507.STL">火車主體改版</a></p>
 <p><img alt="" height="322" src="/images/20210507.png" width="500"/></p>
 <p></p>
